force-app/main/default/objects/Participation__c/fields/BTSP_Participation_ID__c.field-meta.xml
<CustomField>
    <fullName>BTSP_Participation_ID__c</fullName>
    <description>Record ID of the source BTSP Participation record in the affiliate org. Required for the Make integration to write back to the correct affiliate record.</description>
    <inlineHelpText>The record ID of the BTSP Participation in the affiliate org. Used by Make for writeback.</inlineHelpText>
    <label>BTSP Participation ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>