force-app/main/default/objects/Participation__c/fields/BTSP_Provided_Term__c.field-meta.xml
<CustomField>
    <fullName>BTSP_Provided_Term__c</fullName>
    <description>The raw term text received from the affiliate org exactly as submitted. Stored for reference so users can see the original input, especially when the term failed validation and the record is parented to a Manual Review holding term.</description>
    <inlineHelpText>Original term text from the affiliate org. If this differs from the Affiliate Term, the term may have been normalized or flagged for review.</inlineHelpText>
    <label>BTSP Provided Term</label>
    <length>80</length>
    <type>Text</type>
</CustomField>