force-app/main/default/objects/Participation__c/fields/Invalid_Reason__c.field-meta.xml
<CustomField>
    <fullName>Invalid_Reason__c</fullName>
    <description>Describes why the term value from the affiliate could not be validated. Populated when the Participation is parented to the Manual Review holding term. Users should review this reason, correct the term, and re-parent to the correct Affiliate Term.</description>
    <inlineHelpText>Reason the affiliate term failed validation (e.g., uses hyphen instead of slash, missing term type). Fix the term and re-parent this record to the correct Affiliate Term.</inlineHelpText>
    <label>Invalid Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>