force-app/main/default/objects/Participation__c/fields/Last_Participation_Sync__c.field-meta.xml
<CustomField>
    <fullName>Last_Participation_Sync__c</fullName>
    <description>Date of the most recent participation sync from the BTSP Affiliate Org. Populated by the Make integration after a successful sync.</description>
    <inlineHelpText>The date this record was last synced with the BTSP Affiliate Org.</inlineHelpText>
    <label>Last Participation Sync</label>
    <type>Date</type>
</CustomField>