force-app/main/default/objects/Participation__c/fields/Source_Contact_ID__c.field-meta.xml
<CustomField>
    <fullName>Source_Contact_ID__c</fullName>
    <description>Contact ID from the affiliate org that this participation was synced from. Used for traceability and troubleshooting.</description>
    <inlineHelpText>The Salesforce Contact ID from the affiliate org. Populated by the sync handler.</inlineHelpText>
    <label>Source Contact ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>