force-app/main/default/objects/Participation__c/fields/Source_Org_ID__c.field-meta.xml
<CustomField>
    <fullName>Source_Org_ID__c</fullName>
    <description>Org ID of the affiliate org that this participation was synced from. Used for traceability and troubleshooting.</description>
    <inlineHelpText>The Salesforce Org ID of the affiliate org. Populated by the sync handler.</inlineHelpText>
    <label>Source Org ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>