force-app/main/default/objects/Participation__c/fields/Writeback_Status__c.field-meta.xml
<CustomField>
    <fullName>Writeback_Status__c</fullName>
    <description>Tracks the sync status between National and the affiliate org. Set by the sync handler and updated by the Make integration.</description>
    <inlineHelpText>Tracks sync status. The Make integration looks for Pending Writeback to sync data back to the affiliate. When a record has Mismatched Term, re-parent it to the correct Affiliate Term and set this field to Pending Writeback so Make can complete the sync.</inlineHelpText>
    <label>Writeback Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Synced</fullName>
            </value>
            <value>
                <fullName>Pending Writeback</fullName>
            </value>
            <value>
                <fullName>Complete</fullName>
            </value>
            <value>
                <fullName>Error</fullName>
            </value>
            <value>
                <fullName>Mismatched Term</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>